--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React/TypeScript/Vite-Eslint-Prettier-TailwindCSS Starter</title>
+  <title>Default React Template</title>
+  <meta name="description" content="A template built to easily start with client-rendered React app development with Vite.">
 </head>
 
 <body>
